--- a/第一天/index.html
+++ b/第一天/index.html
@@ -33,7 +33,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td width="95%">
+					<td>
 						身体
 					</td>
 					<td></td>
@@ -46,6 +46,35 @@
 				<td></td>
 			</tr>
 			
+		</table>
+		
+		<table border='1' bgcolor='red #000 rgb(255,255,255)' cellspacing='0' cellpadding='0'>
+		    <caption>表格标题</caption>
+		    <thead>
+		    	<tr>
+		        	<td rowspan='2'>
+		            	头部table
+		            </td>
+		        </tr>
+				<tr>
+					<td>
+						单元格
+					</td>
+					
+				</tr>
+		    </thead>
+		    <tbody>
+		        <tr>
+		            <td>
+		            	身体table
+		            </td>
+		        </tr>
+		    </tbody>
+		    <tr>
+		    	<td>
+		        	其他内容
+		        </td>
+		    </tr>
 		</table>
 	</body>
 </html>
