--- a/第一天/index.html
+++ b/第一天/index.html
@@ -53,22 +53,26 @@
 		    <thead>
 		    	<tr>
 		        	<td rowspan='2'>
-		            	头部table
+		            	头部
 		            </td>
+					<td>nr </td>
 		        </tr>
 				<tr>
-					<td>
-						单元格
-					</td>
+					<td>单元格</td>
 					
 				</tr>
 		    </thead>
 		    <tbody>
 		        <tr>
-		            <td>
-		            	身体table
+		            <td colspan="2">
+		            	身体
 		            </td>
 		        </tr>
+				<tr>
+					<td>1</td>
+					<td>2</td>
+				</tr>
+				
 		    </tbody>
 		    <tr>
 		    	<td>
