--- a/第六天/第六天/show.html
+++ b/第六天/第六天/show.html
@@ -7,16 +7,19 @@
 			.light{
 				position: absolute;
 				top:0px;
-				width: 10%;
-				height: 100px;
+				
 				background-color: #FF0000;
 				display: none;
 				text-align: center;
 			}
 			.lf{
+				border: 10px red solid;
+				border-left: 10px white solid;
 				left:50px;
 			}
 			.rg{
+				border: 10px red solid;
+				border-right: 10px white solid;
 				right: 50px;
 			}
 			.text{
@@ -45,9 +48,9 @@
 	</head>
 	<body>
 		<div id="div1" class="father">
-			<span class="light lf">L</span>
+			<span class="light lf"></span>
 			<div class="text">一行文字</div>
-			<span class="light rg">R</span>
+			<span class="light rg"></span>
 		</div>
 		<div id="div2" class="father">
 			<span class="light lf">L</span>
