--- a/第八天/第八天/导航.html
+++ b/第八天/第八天/导航.html
@@ -18,7 +18,7 @@
 			.lf{
 				display: none;
 				position: absolute;
-				border: 10px black solid;
+				border: 10px  solid  aqua;
 				border-left: 10px red solid;
 				top: 0px;
 				left: 0px;
@@ -26,7 +26,7 @@
 			.rt{
 				position: absolute;
 				display: none;
-				border: 10px black solid;
+				border: 10px aqua solid;
 				border-right: 10px red solid;
 				top: 0px;
 				right: 0px;
@@ -54,7 +54,7 @@
 			/* 	position: relative; */
 				display: block;
 			}
-			a:hover span{
+			.menu>li>ul>li:hover span{
 				/* position: absolute; */
 				display: block;
 			}
@@ -100,6 +100,8 @@
 				</li>
 			</ul>
 		</div>
-		<div style="background-color: #000000;height: 50px;width: 100%;clear: left;"></div>
+		<div style="background-color: #000000;height: 50px;width: 100% ;clear: left;">
+			
+		</div>
 	</body>
 </html>
