--- a/第十三天/第十三天/课前测.html
+++ b/第十三天/第十三天/课前测.html
@@ -11,10 +11,10 @@
 			// var info = prompt("一个数","2-6").split("-");
 			// arr.splice(info[0]*1,0,info[1]*1);
 			// console.log(arr);
-			function helo(){
-				console.log(123);
-			}
-			console.log(arr.sort.valueOf());	
+			// function helo(){
+			// 	console.log(123);
+			// }
+			// console.log(arr.sort.valueOf());	
 		</script>
 	</body>
 </html>
