--- a/第十四天/第十四天/测试.html
+++ b/第十四天/第十四天/测试.html
@@ -7,17 +7,13 @@
 	<body>
 		
 		<script type="text/javascript">
-			let str="cccc";
+			let str="f are one";
 						
 			//  表达式对象
+			 
+			var reg = new RegExp("r.n");
+			console.log(str.search(reg));
 			
-			let key="c";
-			// let reg1=/cat/g;
-			let reg1=new RegExp(key,"ig");
-			let arr;
-			while(arr = reg1.exec(str)){
-			    console.log(arr);
-			}
 		</script>
 	</body>
 </html>
