--- a/第十七天_6_22/第十七天_6_22/过度.html
+++ b/第十七天_6_22/第十七天_6_22/过度.html
@@ -8,7 +8,7 @@
 				height: 200px;
 				width: 300px;
 				background-color: skyblue;
-				transition: all 2s ease 0s;
+				transition: width 1s ease 0s,height 1s ease 1s;
 				
 			}
 			div:hover{
