6_27端午前的作业

--- a/第十八天_6_23/作业.html
+++ b/第十八天_6_23/作业.html
@@ -74,8 +74,8 @@
 		addall();
 	}
 	//删除事件
-	$("#table tbody").on("click","td",function(){
-		$(this).parent().remove();
+	$("#table tbody").on("click","td[class='del']",function(){
+		$(this).parent().remove(); 
 		addall(); 
 	});
 	//修改值
