--- a/第十九天_6_24/老师的test1.html
+++ b/第十九天_6_24/老师的test1.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ajax</title>
+		<style type="text/css">
+			.td{
+				border-collapse: collapse;
+			}
+		</style>
 		<script src="js/jquery-1.8.3.min.js"></script>
 		<script>
 			$(function(){
