--- a/第二十二天_6_27_28/bootstrap.html
+++ b/第二十二天_6_27_28/bootstrap.html
@@ -5,13 +5,50 @@
 		<title></title>
 		<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		
+		<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.js"></script>
+		<style type="text/css">
+			td{
+				font-size: 17px;
+			}
+			table{
+				width: 20%;
+				margin: 150px auto;
+			}
+		</style>
 		
 	</head>
 	<body>
-		<input type="button" name="" id="" value="点击" class="btn btn-lg btn-default" />
-		<div class="progress">
+		<form action="" method="post" onsubmit="return sub();">
+			<table>
+				<tr>
+					<td>用户名</td>
+					<td><input name="username" type="text" placeholder="username"/></td>
+				</tr>
+				<tr>
+					<td>密码</td>
+					<td><input name="password" type="password" placeholder="password"/></td>
+				</tr>
+				<tr style="text-align: center;">
+					<td><input type="submit" value="登陆" class="btn btn-lg btn-default" /></td>
+					<td><input type="submit" value="忘记密码" class="btn btn-lg btn-default" /></td>
+				</tr>
+			</table>
+		</form>
+		
+		<!-- <input type="button" name="" id="" value="点击" class="btn btn-lg btn-default" /> -->
+		<!-- <div class="progress">
 		    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60% Complete</span></div>
-		</div>
+		</div> -->
 	</body>
 </html>
+<script type="text/javascript">
+	function sub(){
+		var username = $("input[name='username']").val();
+		var password = $("input[name='password']").val();
+		if(username=="admin" && password=="123456"){
+			return true;
+		}else{
+			return false;
+		}
+	}
+</script>
